[package]
name = "auth0-auth-server"
version = "2.0.1"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
alcoholic_jwt = { version = "1" }
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"

[package.metadata.release]
publish = false
